# include-wasm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: include_module.rs  include_module_in_macro.rs  include_module_options.rs
examples/wasm_module/: Cargo.toml
examples/wasm_module/src/: lib.rs
src/: lib.rs
